--- a/notifications.html
+++ b/notifications.html
@@ -17,7 +17,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="Courses.html">Courses</a></li>
                         <li><a href="notifications.html">Notifications</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="About.html">About</a></li>
                     </ul>
                 </div>
             </div>
